WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
78649
Crash after trying to use FileReader in a document with null origin string
https://bugs.webkit.org/show_bug.cgi?id=78649
Summary
Crash after trying to use FileReader in a document with null origin string
Alexey Proskuryakov
Reported
2012-02-14 16:19:16 PST
Patch forthcoming.
Attachments
proposed fix
(4.19 KB, patch)
2012-02-15 12:45 PST
,
Alexey Proskuryakov
no flags
Details
Formatted Diff
Diff
with Skipped fie maintenance
(16.94 KB, patch)
2012-02-15 15:58 PST
,
Alexey Proskuryakov
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2012-02-15 12:45:30 PST
Created
attachment 127215
[details]
proposed fix
Alexey Proskuryakov
Comment 2
2012-02-15 15:58:14 PST
Created
attachment 127259
[details]
with Skipped fie maintenance
Enrica Casucci
Comment 3
2012-02-15 16:18:21 PST
Comment on
attachment 127259
[details]
with Skipped fie maintenance Looks good to me.
WebKit Review Bot
Comment 4
2012-02-15 20:18:17 PST
Comment on
attachment 127259
[details]
with Skipped fie maintenance Clearing flags on attachment: 127259 Committed
r107879
: <
http://trac.webkit.org/changeset/107879
>
WebKit Review Bot
Comment 5
2012-02-15 20:18:24 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug