Crash after trying to use FileReader in a document with null origin string https://bugs.webkit.org/show_bug.cgi?id=78649

Reviewed by Enrica Casucci.

Source/WebCore:

Test: fast/files/null-origin-string.html

* fileapi/FileReaderLoader.cpp: (WebCore::FileReaderLoader::~FileReaderLoader):
HashMaps don't like empty keys, and they don't like removing keys that have never been added.

LayoutTests:

* fast/files/null-origin-string-expected.txt: Added.
* fast/files/null-origin-string.html: Added.

Dragging files is only implemented on a few platforms. Brought some order to skipped files
for these tests:

* platform/mac/Skipped: Bug 45576 has been fixed long ago; unskip the test.

* platform/efl/Skipped:
* platform/qt/Skipped:
Skipped the new tests.

* platform/gtk-wk2/Skipped:
* platform/mac-wk2/Skipped:
* platform/win-wk2/Skipped:
* platform/wk2/Skipped:
Skipped the new tests, and moved other tests using eventSender.beginDragWithFiles to a
central location. No WK2 port implements these yet, so we needn't maintain the lists
separately.


Canonical link: https://commits.webkit.org/95715@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107879 268f45cc-cd09-0410-ab3c-d52691b4dbfc